Fri Oct 26 01:01:37 UTC 2007  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>

        * examples/Hello/descriptors_events:
        
          Changed test scripts to perl and make them autobuild conform

Thu Oct 25 21:28:13 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * examples/Hello/Receiver/Receiver.mpc:
        * examples/Hello/Sender/Sender.mpc:
        
          Fixed mismatches of lib names.

Thu Oct 25 15:44:50 UTC 2007  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>

        * examples/Hello/descriptors_events:
        
          Added scripts and README files for documentation purposes

Wed Oct 24 16:17:41 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * examples/Hello/Receiver/Receiver_exec.h:
        * examples/Hello/Receiver/Receiver_exec.cpp:
        * examples/Hello/Sender/Sender_exec.h:
        * examples/Hello/Sender/Sender_exec.cpp:

          Made the implementation of these files look like what is currently
          generated by the CIDLC compiler. It seems that the files in question
          were completley handwritten. The changes affects the signitures of
          the entry point functions, and the implementation of the entry point
          functions and factories.

        * examples/Hello/descriptors/DeploymentPlan.cdp:
        * examples/Hello/descriptors/DeploymentPlan_without_ns.cdp:
        * examples/Hello/descriptors/Receiver_Exec.iad:
        * examples/Hello/descriptors/Sender_Exec.iad:
        * examples/Hello/descriptors_RTCCM/rt-config-example.cdp:
        * examples/Hello/descriptors_RTCCM/rt-example.cdp:
        * examples/Hello/descriptors_ReDaC/deploymentplan.cdp:
        * examples/Hello/descriptors_ReDaC/deploymentplan_add.cdp:
        * examples/Hello/descriptors_ReDaC/deploymentplan_remove.cdp:
        * examples/Hello/descriptors_events/flattened_deploymentplan_events.cdp:
        * examples/Hello/descriptors_events/flattened_deploymentplan_events_collocated.cdp: